# chatapp-api

./: .bandit  .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-local.yml  docker-compose.yml  local.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
app/: .flake8  authentication.py  config.py  db.py  jwt.py  main.py  models.py  pytest.ini  schemas.py  services.py  staticfiles.py  utils.py
app/alembic/: env.py
app/alembic/versions/: 3e3f56271e4e_added_account_table.py  c5bdf2407549_user_password_required.py  dc28cf661924_friendship_unique_constraint.py  de133ebf6c6d_chat_friendship.py
app/exceptions/: base.py  friendship.py  user.py
app/migrations/: env.py
app/migrations/versions/: 764dedc14ce8_init.py
app/models/: __init__.py  base.py  chat.py  user.py
app/routes/: chat.py  friendship.py  user.py
app/schemas/: base.py  chat.py  friendship.py  user.py
app/services/: base.py  chat.py  friendship.py  user.py
app/tests/: conftest.py  test_endpoints.py  test_models.py
app/tests/endpoints/: test_user_endpoints.py
docker/local/fastapi/: Dockerfile
docker/production/fastapi/: Dockerfile
scripts/: db_wait.sh  start.sh  wait_for_db.sh
src/: alembic.ini  authentication.py  config.py  db.py  dependencies.py  main.py  paginator.py  staticfiles.py  utils.py
src/alembic/: env.py
src/alembic/versions/: 2482bd8ee410_chat_is_owner_field.py  3e3f56271e4e_added_account_table.py  c5bdf2407549_user_password_required.py  dc28cf661924_friendship_unique_constraint.py  de133ebf6c6d_chat_friendship.py  f15b3e795128_block_model_added.py
src/auth/: dependencies.py  exceptions.py  jwt.py  routes.py  schemas.py  services.py  utils.py
src/base/: exceptions.py  models.py  services.py
src/chat/: exceptions.py  models.py  routes.py  schemas.py  services.py  websocket_managers.py
src/chatapp_api/: config.py  db.py  dependencies.py  main.py  paginator.py  staticfiles.py  utils.py
src/chatapp_api/alembic/: env.py
src/chatapp_api/alembic/versions/: 2482bd8ee410_chat_is_owner_field.py  3e3f56271e4e_added_account_table.py  45f3cfbf5f3d_added_not_null.py  6acc4257a634_added_not_null.py  c5bdf2407549_user_password_required.py  dc28cf661924_friendship_unique_constraint.py  de133ebf6c6d_chat_friendship.py  f15b3e795128_block_model_added.py
src/chatapp_api/auth/: dependencies.py  exceptions.py  jwt.py  routes.py  schemas.py  service.py  services.py  utils.py
src/chatapp_api/base/: exceptions.py  models.py  repository.py  routes.py  services.py
src/chatapp_api/chat/: dependencies.py  exceptions.py  models.py  repository.py  routes.py  schemas.py  service.py  services.py  websocket_managers.py
src/chatapp_api/friendship/: dependencies.py  exceptions.py  models.py  repository.py  routes.py  schemas.py  service.py  services.py
src/chatapp_api/user/: dependencies.py  exceptions.py  models.py  repository.py  routes.py  schemas.py  service.py  services.py
src/exceptions/: base.py  chat.py  user.py
src/friendship/: models.py  routes.py  schemas.py  services.py
src/models/: base.py  chat.py  user.py
src/routes/: chat.py  friendship.py  user.py
src/schemas/: base.py  chat.py  friendship.py  user.py
src/services/: base.py  chat.py  friendship.py  user.py
src/tests/: conftest.py  sql.py
src/tests/endpoints/: test_friendship_endpoints.py  test_user_endpoints.py
src/user/: models.py  routes.py  schemas.py  services.py
src/websocket_managers/: chat.py
src/ws_managers/: __init__.py  redis.py
tests/: __init__.py  async_sql.py  conftest.py  db_managers.py  sql.py  test_utils.py  utils.py
tests/endpoints/: test_auth_endpoints.py  test_chat_endpoints.py  test_friendship_endpoints.py  test_user_endpoints.py
