[tool.poetry]
name = "chatapp-api"
version = "0.0.1"
description = "API for real time communication with friends."
authors = ["Togrul Asadov <adsads00123@gmail.com>"]
readme = "README.md"
packages = [{include = "chatapp_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.81.0"
websockets = "10.3"
alembic = "1.8.1"
anyio = "3.6.1"
asyncpg = "0.26.0"
attrs = "22.1.0"
bcrypt = "4.0.0"
certifi = "2022.6.15"
cffi = "1.15.1"
charset-normalizer = "2.1.1"
click = "8.1.3"
colorama = "0.4.5"
cryptography = "37.0.4"
dnspython = "2.2.1"
ecdsa = "0.18.0"
email-validator = "1.2.1"
greenlet = "1.1.3"
h11 = "0.13.0"
httptools = "0.4.0"
idna = "3.3"
iniconfig = "1.1.1"
mako = "1.2.2"
markupsafe = "2.1.1"
mccabe = "0.7.0"
packaging = "21.3"
passlib = "1.7.4"
pillow = "9.2.0"
pluggy = "1.0.0"
psycopg2 = "2.9.3"
py = "1.11.0"
pyasn1 = "0.4.8"
pycodestyle = "2.9.1"
pycparser = "2.21"
pydantic = "1.10.1"
pyflakes = "2.5.0"
pyparsing = "3.0.9"
python-dotenv = "0.21.0"
python-jose = "3.3.0"
python-multipart = "0.0.5"
pyyaml = "6.0"
requests = "2.28.1"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy = "1.4.40"
sqlalchemy2-stubs = "0.0.2a27"
starlette = "0.19.1"
tomli = "2.0.1"
typing-extensions = "4.3.0"
urllib3 = "1.26.12"
uvicorn = "0.18.3"
watchfiles = "0.16.1"

[tool.poetry.dev-dependencies]
coverage = "6.4.4"
pytest = "7.1.3"
pytest-cov = "3.0.0"
flake8 = "5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
